[FTR][SLOT-48]: Se agregan los precios por defecto